--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,16 +27,28 @@
         android:scaleType="fitCenter"
         android:src="@drawable/icon_exit"/>
 
-    <ImageButton
+    <ImageView
         app:layout_constraintEnd_toEndOf="parent"
         android:backgroundTint="@color/white"
         android:scaleType="centerCrop"
-        android:id="@+id/btn_materi"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="288dp"
-        android:src="@drawable/btn_materi"
+        android:id="@+id/img_home"
+        android:layout_width="280dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="200dp"
+        android:src="@drawable/img_home"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="@color/white"
+        android:id="@+id/btn_start"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_home"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/btn_start"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
