--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_width="280dp"
         android:layout_height="220dp"
         android:layout_marginTop="200dp"
-        android:src="@drawable/img_home"
+        android:src="@drawable/img_main"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
