--- a/app/src/main/res/layout/activity_materi.xml
+++ b/app/src/main/res/layout/activity_materi.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".MateriActivity">
+    tools:context=".materi.MateriActivity">
 
     <ImageButton
         android:backgroundTint="@color/white"
