--- a/app/src/main/res/layout/activity_pengertian.xml
+++ b/app/src/main/res/layout/activity_pengertian.xml
@@ -4,12 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".splashscreen.SplashActivity">
-
-    <ImageView
-        android:id="@+id/splashScreenImage"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/splash_screen"/>
+    tools:context=".materi.PengertianActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
