--- a/app/src/main/res/layout/activity_tips.xml
+++ b/app/src/main/res/layout/activity_tips.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".materi.PengertianActivity">
+    tools:context=".materi.TipsActivity">
 
     <ImageView
         android:backgroundTint="@color/white"
@@ -13,7 +13,7 @@
         android:layout_marginTop="50dp"
         android:layout_width="144dp"
         android:layout_height="44dp"
-        android:src="@drawable/icon_pengertian"
+        android:src="@drawable/icon_tips"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
