--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,6 +7,7 @@
     tools:context=".splashscreen.SplashActivity">
 
     <ImageView
+        android:scaleType="centerCrop"
         android:id="@+id/splashScreenImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
